# autocomeback

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
autocomeback/: __init__.py  __main__.py  config.py  db.py  models.py  utils.py
autocomeback/adapters/: base.py  dbkpop.py  reddit.py
terraform/: backend.tf  main.tf
