[tool.poetry]
name = "autocomeback"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
loguru = "^0.6.0"
lxml = "^4.9.2"
requests = "^2.28.2"
aiohttp = "^3.8.4"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
firebase-admin = "^6.1.0"
google-cloud-firestore = "^2.9.1"
pytz = "^2022.7.1"
google-cloud-functions = "^1.11.0"
asyncpraw = "^7.6.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
