[tool.poetry]
name = "autocomeback"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvd.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
lxml = "^5.3.0"
requests = "^2.32.3"
aiohttp = "^3.10.10"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
pytz = "^2024.2"
asyncpraw = "^7.8.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
python-ulid = { extras = ["pydantic"], version = "^3.0.0" }
alembic = "^1.13.3"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
