[tool.poetry]
name = "autocomeback"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvd.studio>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
lxml = "^5.3.0"
requests = "^2.32.3"
aiohttp = "^3.10.10"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
firebase-admin = "^6.5.0"
google-cloud-firestore = "^2.19.0"
pytz = "^2024.2"
google-cloud-functions = "^1.18.0"
asyncpraw = "^7.8.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
